# OsmPoi

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build and test.yml  libosmpoi.yml  ompoi-cli.yml  rust.yml
osmpoi/: Cargo.toml
osmpoi/include/: libosmpoi.h
osmpoi/src/: csv.rs  ffi.rs  lib.rs  poi.rs
osmpoi/src/poi/: create_table_poi.sql  create_table_ways.sql  insert_into_poi_from_nodes.sql  insert_into_ways.sql  select_lat_lon_from_ways_with_relation_id.sql  select_undetermined_relation_dependencies.sql  sql.rs  update_relations.sql
scripts/: build_mac.sh
src/: aggregate.rs  clean.rs  csv.rs  distance.rs  extract.rs  ffi.rs  lib.rs  main.rs  orm.rs  poi.rs
src/poi/: count_undetermined_relations.sql  create_index_relation_references_index.sql  create_index_way_nodes_index.sql  create_table_nodes.sql  create_table_relation_references.sql  create_table_relations.sql  create_table_way_nodes.sql  drop_table_relation_references.sql  drop_table_way_nodes.sql  drop_table_ways.sql  dump.rs  insert_into_nodes.sql  insert_into_poi_from_relations.sql  insert_into_poi_from_ways.sql  insert_into_relation_references.sql  insert_into_relations.sql  insert_into_way_nodes.sql  osm.rs  select_all_way_id.sql  select_lat_lon_from_nodes_with_relation_id.sql  select_lat_lon_from_relations_with_relation_id.sql  select_lat_lon_with_way_id.sql  select_relations_yet_undetermined.sql  sql.rs  update_way_with_lat_lon.sql
ui/OsmPoi for MacOS/OsmPoi for MacOS.xcodeproj/: project.pbxproj
ui/OsmPoi for Windows/: OsmPoi for Windows.sln
ui/osmpoi-cli/: Cargo.toml
(+24 files in other folders)
