[package]
name = "osmpoi"
version = "0.1.0"
authors = ["Xubai Wang <kindredwekingwang@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["derive"] }
csv = "~1.0"
osmpbfreader = "0.14.0"
rusqlite = { version = "0.24.2", features = ["bundled", "backup"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.61"
derive_more = "0.99.11"
anyhow = "1.0.38"
dirs = "5.0.1"
