[package]
name = "osmpoi"
version = "0.1.0"
authors = ["Xubai Wang <kindredwekingwang@gmail.com>"]
edition = "2018"

[dependencies]
async-recursion = "1.0.4"
ormlite = { version = "0.14.2", features = ["sqlite"] }
osmpbfreader = "0.16.0"
snafu = "0.7.4"
tokio = { version = "1.28.2", features = ["full"] }
