[package]
name = "osmpoi"
version = "0.1.0"
authors = ["Xubai Wang <kindredwekingwang@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.2.2"
im-rc = "15.1.0"
indicatif = "0.17.5"
lazy_static = "1.4.0"
osmpbf = "0.3.0"
serde = { version = "1.0.164", features = ["derive"] }
sled = "0.34.7"
typed-sled = "0.2.3"
