[package]
name = "osmpoi"
version = "0.1.0"
authors = ["Xubai Wang <kindredwekingwang@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
csv = "~1.0"
dirs = "3.0.1"
osmpbfreader = "0.14.0"
rusqlite = "0.24.2"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.61"
